# ic-drip

./: .gitignore  Cargo.toml  dfx.json  index.html  package-lock.json  package.json  readme.md  vite.config.js
data/: all_drip_data_rarity_stats.csv  first_2822_drips.csv
src/ic_loot_assets/: App.vue  main.js
src/ic_loot_rs/: Cargo.toml  address.rs  ic_loot.did  lib.rs  loot.rs  loot2.rs  rand.rs
