[package]
name = "ic_loot_rs"
version = "0.1.0"
authors = ["Rick Porter <rick@dscvr.one>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
ic-types = "0.2.1"
ic-cdk = "0.2.4"
base64 = "0.13.0"
ic-cdk-macros = "0.3.0"
ic-certified-map = "0.1.0"
libflate = "1"
num-traits = "0.2.14"
serde = "1.0.116"
serde_cbor = "0.11"
serde_bytes = "0.11"
serde_with = "1.6.2"