[package]
name = "ic_loot_rs"
version = "0.1.0"
authors = ["Rick Porter <rick@dscvr.one>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.0"
ic-cdk = "0.12.0"
base64 = "0.21.5"
ic-cdk-macros = "0.8.2"
ic-certified-map = "0.4.0"
libflate = "2.0.0"
num-traits = "0.2.14"
serde = "1.0.116"
serde_cbor = "0.11"
serde_bytes = "0.11"
serde_with = "3.4.0"
